# sweeper-rs

./: Cargo.toml  Dockerfile  README.md  build.rs  build.sh  protocol.md
.github/workflows/: rust.yml
client/: ChunkStore.js  ClientPlayers.js  MineSocket.js  Player.js
client/canvasUI/: PlayerInfo.js
crates/byte-pair-encoding/: Cargo.toml
crates/byte-pair-encoding-generator/: Cargo.toml
crates/byte-pair-encoding-generator/src/: main.rs
crates/byte-pair-encoding/src/: lib.rs
crates/client/: Cargo.toml  index.html
crates/client/shaders/: shader.frag  shader.vert  shader.wsgl
crates/client/src/: camera.rs  chunk_quadtree.rs  lib.rs  main.rs  shaders.rs  socket.rs
crates/compression/: Cargo.toml
crates/compression-tester/: Cargo.toml
crates/compression-tester/src/: main.rs
crates/compression/src/: lib.rs
crates/huffman/: Cargo.toml
crates/huffman/src/: lib.rs
crates/huffman_derive/: Cargo.toml
crates/huffman_derive/src/: lib.rs
crates/huffman_derive/tests/: tests.rs
crates/load-tester/: Cargo.toml
crates/load-tester/src/: main.rs
crates/server/: Cargo.toml  build.rs
crates/server-new/: Cargo.toml
crates/server-new/src/: main.rs
crates/server/src/: backup.rs  client_messages.rs  eventlog.rs  main.rs  server_messages.rs
crates/server/static/: index.html
crates/socketio-local/: Cargo.toml
crates/socketio-local/src/: lib.rs
crates/wgpu-frontend/: Cargo.toml  index.html
crates/wgpu-frontend/src/: camera.rs  chunk_loader.rs  chunk_update_queue.rs  coins.rs  coins.wgsl  common.wgsl  cursor.psd  cursors.rs  cursors.wgsl  draw_texture_to_screen.wgsl  draw_tiles_to_texture.wgsl  fingers.rs  lib.rs  main.rs  shader.rs  shader.wgsl  sweeper_socket.rs  texture.rs  tile.wgsl  tile_blanking.wgsl  tile_sprites.rs  tilemap.rs  tilerender_texture.rs  tilesheet_texture.rs  url.rs  zoom_render.wgsl
crates/wgpu-frontend/src/canvas2d_overlay/: mod.rs  overlay_canvas.rs  overlay_controller.rs
crates/wgpu-frontend/src/sweeper_socket/: interface.rs  js_websocket.rs  local.rs  mod.rs  native_websocket.rs  socketio.rs  websocket.rs
crates/world/: Cargo.toml  chunk_store.rs  client_messages.rs  compression.rs  events.rs  huffman.rs  lib.rs  player.rs  rect.rs  server_messages.rs  tile.rs
crates/world/chunk/: chunk.rs  chunk_mines.rs  chunk_tiles.rs  mod.rs
crates/world/position/: chunk_position.rs  mod.rs  position.rs  position_in_chunk.rs
crates/world/updates/: client_messages.rs  compression.rs  events.rs  mod.rs  server_message_bundle.rs  server_messages.rs  updated_rect.rs
src/: client_messages.rs  events.rs  main.rs  server_messages.rs  world.rs
static/: Chunk.js  ChunkStore.js  ClientPlayers.js  MineSocket.js  MineSocketNew.js  Player.js  Text.js  Tile.js  TileGraphics.js  TileMap.js  TileView.js  Vector2.js  index.html  style.css
static/input/: Mouse.js  MouseInput.js  TouchInput.js
static/pkg/: client.d.ts  client.js  client_bg.wasm  client_bg.wasm.d.ts
