[package]
name = "sweeper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
derive_more = "0.99.17"
futures-util = "0.3.30"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
rust_socketio = { version = "*", features = ["async"] }