[package]
name = "sweeper-client"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
limelight = "0.1.3"
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]
