[package]
name = "load-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-tungstenite = { version = "0.26.2", features = ["stream"] }
world = { path = "../world" }
futures-util = "0.3.31"
serde_json = "1.0.139"
rand = { version = "0.8.5", features = [] }