[package]
name = "sweeper-server"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
axum = "0.7.5"
socketioxide = "0.13.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
postcard = { version = "1.0.8", features = ["alloc"] }
world = { path = "../world" }
clap = { version = "4.5.17", features = ["derive"] }
include_dir = "0.7.4"
mime_guess = "2.0.4"
log = "0.4.21"