[package]
name = "wgpu-frontend"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
world = { path = "../world" }
winit = { version = "0.29.15", features = ["rwh_05"] }
log = "0.4"
wgpu = "23.0.1"
cfg-if = "1.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
anyhow = "1.0.93"
env_logger = "0.11.5"
rand = "0.9.0-alpha.1"
cgmath = "0.18.0"
chrono = "0.4.39"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "23.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
chrono = { version = "0.4.39", features = ["js-sys"] }
socketio-local = { path = "../socketio-local" }
serde_json = "1.0.128"
once_cell = "1.20.2"

[lib]
crate-type = ["cdylib", "rlib"]