[package]
name = "wgpu-frontend"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
world = { path = "../world" }
log = { version = "0.4", features = [] }
wgpu = "23.0.1"
cfg-if = "1.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
anyhow = "1.0.93"
env_logger = "0.11.5"
cgmath = "0.18.0"
chrono = "0.4.39"
#winit = { path = "../../../winit" }
winit = { git = "https://github.com/bogoblin/winit", branch = "4113-touch-input", version = "0.30.9" }
futures = "0.3.31"
derive_more = { version = "2.0.1", features = ["add", "mul"] }
url = "2.5.4"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1.0.139"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "23.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "ProgressEvent",
    "Blob",
    "FileReader",
    "MediaQueryList",
    "Url",
    "UrlSearchParams",
    "Location",
    "History",
] }
chrono = { version = "0.4.39", features = ["js-sys"] }
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
once_cell = "1.20.2"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
