[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
rand = "0.9.0-alpha.1"
serde_json = "1.0.117"
base64 = "0.22.1"
huffman_derive = {path = "../huffman_derive"}
huffman = {path = "../huffman"}
derive_more = { version = "1.0.0", features = ["full"] }
bytemuck = "1.20.0"

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[lib]
name = "world"
path = "lib.rs"
