[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.117"
base64 = "0.22.1"
huffman_derive = {path = "../huffman_derive"}
huffman = {path = "../huffman"}
derive_more = { version = "1.0.0", features = ["full"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
bytes-cast = "0.3.0"
quadtree_rs = "0.1.3"
log = "0.4.21"
bitvec = "1.0.1"
quickcheck = "1.0.3"

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[lib]
name = "world"
path = "lib.rs"
